# basil

./: .env.example  .gitignore  .mcp.json  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  basil  basil-cli  pyproject.toml
assets/: app.js  style.css  ui.html
basil/: __init__.py  claude.py  config.py  main.py  permissions.py  sessions.py
hooks/: permission_request.py
src/: __init__.py  claude.py  config.py  config.rs  docker.rs  error.rs  init.rs  main.py  main.rs  mcp.rs  sessions.py  ui.html  ui.rs
src/api/: chat.rs  health.rs  mcp.rs  mod.rs  session.rs
src/models/: mod.rs  session.rs
src/services/: claude.rs  mod.rs  sessions.rs
system-files/: install.sh
system-files/claude-settings/: settings-addition.json
