[package]
name = "basil"
version = "0.1.0"
edition = "2021"
authors = ["Basil Contributors"]
description = "HTTP API bridge for Claude Code CLI"

[dependencies]
tokio = { version = "1", features = ["full", "process", "sync", "signal"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tower-http = { version = "0.6", features = ["cors"] }
time = { version = "0.3", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
bollard = "0.18"
libc = "0.2"
tar = "0.4"
futures-util = "0.3"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
