[project]
name = "basil"
version = "0.1.0"
description = "Secure Telegram bridge for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
]

[project.scripts]
basil = "basil.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
