[project]
name = "basil"
version = "0.1.0"
description = "HTTP API bridge for Claude Code CLI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
]

[project.scripts]
basil = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
